snapshots/care/data4life/hc-util-sdk-kmp/error/1.13.0-SNAPSHOT/error-1.13.0-20220822.093702-3-sources.jar.md5
e0f4e417d05caa2761e5d6875ad619e8